--- a/resume-parser.ipynb
+++ b/resume-parser.ipynb
@@ -1,8 +1,66 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kernel Setup Instructions\n",
+    "\n",
+    "1. Click on \"Select Kernel\" in the top-right corner of the notebook\n",
+    "2. Choose \"Python Environments...\"\n",
+    "3. Select the Python interpreter from your virtual environment:\n",
+    "   - Look for `myvenv/Scripts/python.exe`\n",
+    "   - If you don't see it, click \"Refresh\" and look again\n",
+    "\n",
+    "If you don't see your virtual environment, run these commands in the terminal:\n",
+    "```\n",
+    ".\\myvenv\\Scripts\\activate\n",
+    "python -m ipykernel install --user --name=resume_parser_env --display-name=\"Python (Resume Parser)\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python executable: d:\\Trina_Data\\WORK\\resume-parser-poc\\myvenv_3_10\\Scripts\\python.exe\n",
+      "Virtual environment: D:\\Trina_Data\\WORK\\resume-parser-poc\\myvenv_3_10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "print(\"Python executable:\", sys.executable)\n",
+    "print(\"Virtual environment:\", os.environ.get('VIRTUAL_ENV', 'Not in a virtual environment'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Python interpreter: d:\\Trina_Data\\WORK\\resume-parser-poc\\myvenv_3_10\\Scripts\\python.exe\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(f\"Current Python interpreter: {sys.executable}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "id": "W3HCcz4TxiXZ"
    },
@@ -47,24 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "cRAhI3I-tgER"
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\10723269\\IdeaProjects\\resume-parser\\myvenv\\lib\\site-packages\\spacy\\util.py:910: UserWarning: [W095] Model 'en_core_web_sm' (3.8.0) was trained with spaCy v3.8.0 and may not be 100% compatible with the current version (3.7.5). If you see errors or degraded performance, download a newer compatible model or retrain your custom model with the current spaCy version. For more details and available updates, run: python -m spacy validate\n",
-      "  warnings.warn(warn_msg)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ spaCy English model already installed\n"
+      "📥 Downloading spaCy English model...\n",
+      "✅ spaCy English model installed successfully\n",
+      "✅ spaCy English model installed successfully\n"
      ]
     }
    ],
@@ -121,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "id": "zQfKCZILDKI4"
    },
@@ -131,9 +183,9 @@
      "output_type": "stream",
      "text": [
       "System Information:\n",
-      "CPU Cores: 8\n",
-      "RAM: 15.7 GB\n",
-      "Available RAM: 1.4 GB\n",
+      "CPU Cores: 6\n",
+      "RAM: 7.4 GB\n",
+      "Available RAM: 1.2 GB\n",
       "💻 GPU: PyTorch not installed - using CPU (this is fine for resume parsing)\n",
       "💡 PyTorch is optional. Uncomment the line below to install it if needed:\n",
       "   # subprocess.check_call([sys.executable, '-m', 'pip', 'install', 'torch'])\n",
@@ -182,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "id": "EN_Ly_xIy2wW"
    },
@@ -253,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "id": "K58rqElgytFu"
    },
@@ -264,7 +316,7 @@
        "2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "id": "xwf4G_Tdzeuz"
    },
@@ -446,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "id": "Bo4doUbj0VY_"
    },
@@ -462,7 +514,7 @@
        "   [71, 77, 'SKILLS']]}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "id": "fB41q3Kz4gXT"
    },
@@ -525,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "id": "Wkp8VDR2CAxi"
    },
@@ -560,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "id": "xw_OcvfODgvr"
    },
@@ -571,7 +623,7 @@
        "(1, 1)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "id": "sjzPoZV5DrVR"
    },
@@ -598,7 +650,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 74.82it/s]\n",
+      "100%|██████████| 1/1 [00:00<?, ?it/s]\n",
       "\n"
      ]
     },
@@ -614,7 +666,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 334.18it/s]"
+      "100%|██████████| 1/1 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -665,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "id": "ppg0q0DbEa5I"
    },
@@ -675,6 +727,7 @@
      "output_type": "stream",
      "text": [
       "📊 Test dataset contains 1 documents\n",
+      "🔤 Total tokens in test dataset: 16\n",
       "🔤 Total tokens in test dataset: 16\n"
      ]
     }
@@ -880,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "SK4t8z1cx_RB"
    },
@@ -992,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "BAiMm_Jo22rE"
    },
@@ -1014,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "CU_1gKho3eoc"
    },
@@ -1043,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "id": "7eqrreXF3zSY"
    },
@@ -1056,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "id": "juU8wGTq31qh"
    },
@@ -1109,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "id": "2spqPoI74K-k"
    },
@@ -1149,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "id": "19lBR6wj4MpF"
    },
@@ -1160,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "id": "xvX4umiG6a1-"
    },
@@ -1171,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "id": "ojq2ktNL6iJl"
    },
@@ -1193,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "id": "QHPAyNmG8Car"
    },
@@ -1293,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1419,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "myvenv",
+   "display_name": "myvenv_3_10",
    "language": "python",
    "name": "python3"
   },
@@ -1380,7 +1433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
